CHANGES
=======

* upgrade script to boto3
* docs: Update the contributing guidelines link
* chore: Updating Python Requirements
* fix: Add resource type to tags
* fix: Fix spelling of tag parameter
* fix: Pass through a list instead of a set
* fix: Fix elb pagination call
* fix: errant boto2 syntax
* fix: remove old code from asg deployment
* fix: Fix cleanup\_asgs for boto3
* fix: elb-related deployment code boto3-ification
* fix: Fix usage of old name
* fix: add boto3 to more function calls
* fix: Convert ASG code to use boto3
* fix: unit test was out of date
* fix: upgrade and unit tests
* chore: Allow retirement redrive
* chore: update tests and change error output
* chore: Improve doc string
* feat: Clarify mergeback PR description (#624)
* feat!: Allow choosing deployment tag's name when merged private PRs (#622)
* feat: Remove now-unused scripts relating to edxapp deployments (#620)
* fix: fix 401 unauthorized error in user retirement amplitude\_api
* feat: user retirement from Amplitdue integrated to user\_retirement script
* build: Updating a missing workflow file \`add-depr-ticket-to-depr-board.yml\`
* build: Creating a missing workflow file \`add-remove-label-on-comment.yml\`
* build: Creating a missing workflow file \`self-assign-issue.yml\`
* chore: Add test for user limit
* chore(api update): Support new limit parameter for get\_learners\_to\_retire
* fix: some repos disabled the \`allow\_merge\_commit\`. Using squash metho… (#609)
* chore: add retrieve base ami script
* chore: Add new CLI options for retire user actions
* fix: Increased number of records per page to 100. (#602)
* Add new option to prune batch size and change defaults for max size
* feat: add flag to check all PR checks status
* feat: Adding new script to get all open prs with ready to merge label
* fix: adding new method to fetch all check runs by commit. (#591)
* fix: fixing upgrade requirements. (#592)
* fix: tox failures due to multiple package-looking directories