@@ -77,9 +77,7 @@ def fake_learners_to_retire():
 
 
 @patch('tubular.edx_api.BaseApiClient.get_access_token', return_value=('THIS_IS_A_JWT', None))
-# @patch('tubular.scripts.retirement_archive_and_cleanup.S3Connection')
 @patch('boto3.resource')
-# @patch('tubular.scripts.retirement_archive_and_cleanup.Key')
 @patch.multiple(
     'tubular.edx_api.LmsApi',
     get_learners_by_date_and_status=DEFAULT,
@@ -100,7 +98,6 @@ def test_successful(*args, **kwargs):
     mock_get_learners.assert_called_once()
     mock_bulk_cleanup_retirements.assert_called_once_with(
         ['test1', 'test2', 'test3'])
-    # mock_s3connection_class.assert_called_once_with()
     mock_s3connection_class.call_count == 2
 
     assert result.exit_code == 0
@@ -109,8 +106,6 @@ def test_successful(*args, **kwargs):
 
 @patch('tubular.edx_api.BaseApiClient.get_access_token', return_value=('THIS_IS_A_JWT', None))
 @patch('boto3.resource')
-# @patch('tubular.scripts.retirement_archive_and_cleanup.S3Connection')
-# @patch('tubular.scripts.retirement_archive_and_cleanup.Key')
 @patch.multiple(
     'tubular.edx_api.LmsApi',
     get_learners_by_date_and_status=DEFAULT,
@@ -140,8 +135,6 @@ def test_successful_with_batching(*args, **kwargs):
 
 @patch('tubular.edx_api.BaseApiClient.get_access_token', return_value=('THIS_IS_A_JWT', None))
 @patch('boto3.resource')
-# @patch('tubular.scripts.retirement_archive_and_cleanup.S3Connection')
-# @patch('tubular.scripts.retirement_archive_and_cleanup.Key')
 @patch.multiple(
     'tubular.edx_api.LmsApi',
     get_learners_by_date_and_status=DEFAULT,
@@ -149,7 +142,6 @@ def test_successful_with_batching(*args, **kwargs):
 )
 def test_successful_dry_run(*args, **kwargs):
     mock_get_access_token = args[1]
-    # mock_s3connection_class = args[1]
     mock_get_learners = kwargs['get_learners_by_date_and_status']
     mock_bulk_cleanup_retirements = kwargs['bulk_cleanup_retirements']
 
